--- a/systemd/pyfan.service
+++ b/systemd/pyfan.service
@@ -7,5 +7,5 @@ ExecStart=/opt/pyfan/venv/bin/python -m pyfan
 Environment=PYTHONUNBUFFERED=1
 Restart=on-failure
 User=pyfan
-# [Install]
-# WantedBy=default.target
+[Install]
+WantedBy=default.target
